expr/grammar.js
    source_file: ($) => $.expression, // expr grammar is for expressions only
    expression: ($) =>
      prec.left(
        seq(
          $.expr_atom,
          repeat($.expr_tail),
        ),
      ),

    expr_atom: ($) =>
      choice(
        $.json_object_literal,
        $.parenthetical_expression,
        $.unary_expression,
        $.macro,

        // Literals
        $.string_literal,
        $.numeric_literal,
        $.json_array_literal,

        // Variables
        $.lvn,
        $.gvn,
        $.ssvn,
        $.instance_variable,
        $.sql_field_reference,

        // Builtin functions
        $.system_defined_variable,
        $.system_defined_function,

        // User defined functions
        $.extrinsic_function,

        // ..property/method/parameter references
        $.relative_dot_property,
        $.relative_dot_method,
        $.relative_dot_parameter,
        $.oref_chain_expr,

        // Other special keywords
        $.class_method_call,
        $.class_parameter_ref,
        $.superclass_method_call,
      ),

    expr_tail: ($) =>
      prec.left(
        1,
        choice(
          seq(
            $.binary_operator,
            $.expression,
          ),
          $.pattern_operator,
        ),
      ),

    binary_operator: (_) =>
      choice(
        '**', // Exponentiation
        '*', // Multiplication
        '/', // Division
        '\\', // Integer-division
        '#', // Modulo
        '+', // Addition
        '-', // Subtraction
        '=', // Equality
        '\'=', // Inequality
        '<', // Less than
        '<=', // Less than-or-equal
        '\'>', // Not greater-than (same as <=)
        '>', // Greater than
        '>=', // Greater than-or-equal
        '\'<', // Not less-than (same as >=)
        '\'', // Negation
        '!', // Logical OR
        '||', // Logical OR (short-circuit)
        '\'!', // Not OR
        '&', // Logical AND
        '&&', // Logical AND (short-circuit)
        '\'&', // Not AND
        '_', // Concatenate
        ']', // Follows
        '\']', // Not follows
        '[', // Contains
        '\'[', // Not contains
        ']]', // Sorts-after
        '\']]', // Not Sorts-after
      ),
    gvn: ($) =>
      prec.right(
        seq(
          '^',
          optional(
            choice(
              token.immediate('||'),
              seq(token.immediate('|'), choice($.objectscript_identifier, $.string_literal), optional(seq(',', choice($.objectscript_identifier, $.string_literal) )), '|'),
              seq(token.immediate('['), choice($.objectscript_identifier, $.string_literal), optional(seq(',', choice($.objectscript_identifier, $.string_literal) )), ']'),
            ),
          ),
          optional(token.immediate(/[%A-Za-z][A-Za-z0-9]*(\.[A-Za-z0-9]+)*/)),
          optional($.subscripts),
        ),
      ),
    lvn: ($) => prec.right(seq($.objectscript_identifier, optional($.subscripts))),
    subscripts: ($) =>
      seq(
        alias(token.immediate('('), $.bracket),
        $.expression,
        repeat(seq(',', $.expression)),
        alias(')', $.bracket),
      ),

    system_defined_variable: ($) =>
      prec(-1,
        choice(
          /\$D(EVICE)?/i, // $DEVICE
          /\$EC(ODE)?/i, // $ECODE
          $.estack_token, // $ESTACK
          $.etrap_token, // $ETRAP
          /\$HALT/i, // $HALT
          /\$H(OROLOG)?/i, // $HOROLOG
          /\$I(O)?/i, // $IO
          /\$J(OB)?/i, // $JOB
          /\$K(EY)?/i, // $KEY
          $.namespace_token, // $NAMESPACE
          /\$P(RINCIPAL)?/i, // $P[RINCIPAL] conflicts with $P[IECE]
          /\$Q(UIT)?/i, // $QUIT
          $.roles_token, // $ROLES
          /\$ST(ACK)?/i, // $STACK conflits with $STACK()
          /\$S(TORAGE)?/i, // $S[TORAGE] conflicts with $S[ELECT]
          /\$SY(STEM)?/i, // $SYSTEM
          /\$T(EST)?/i, // $TEST
          /\$THIS/i, // $THIS
          /\$THROWOBJ/i, // $THROWOBJ
          /\$TL(EVEL)?/i, // $TLEVEL
          /\$USERNAME/i, // $USERNAME
          /\$X/i, // $X
          /\$Y/i, // $Y
          /\$ZA/i, // $ZA
          /\$ZB/i, // $ZB
          /\$ZC(HILD)?/i, // $ZCHILD
          /\$ZEOF/i, // $ZEOF
          /\$ZEOS/i, // $ZEOS
          /\$ZE(RROR)?/i, // $ZERROR
          /\$ZH(OROLOG)?/i, // $ZHOROLOG
          /\$ZI(O)?/i, // $ZIO
          /\$ZJ(OB)?/i, // $ZJOB
          /\$ZM(ODE)?/i, // $ZMODE
          /\$ZN(AME)?/i, // $ZNAME
          /\$ZNSPACE/i, // $ZNSPACE
          /\$ZO(RDER)?/i, // $ZORDER
          /\$ZP(ARENT)?/i, // $ZPARENT
          /\$ZPI/i, // $ZPI
          /\$ZPOS(ITION)?/i, // $ZPOSITION
          /\$ZR(EFERENCE)?/i, // $ZREFERENCE
          /\$ZS(TORAGE)?/i, // $ZSTORAGE
          choice(/\$ZTIMESTAMP/i, /\$ZTS/i), // $ZTIMESTAMP
          choice(/\$ZTIMEZONE/i, /\$ZTZ/i), // $ZTIMEZONE
          /\$ZT(RAP)?/i, // $ZTRAP
          /\$ZV(ERSION)?/i, // $ZVERSION
        )),
    system_defined_function: ($) =>
      choice(
        // Keep specialized rules before generic dollar_function to avoid conflicts.
        $.dollar_piece,
        $.dollar_extract,
        $.dollar_list,
        $.dollar_listget,
        $.dollar_case,
        $.dollar_select,
        $.dollar_classmethod,
        $.dollar_method,
        $.dollar_text,
        $.dollarsf,
        $.dollar_function,
        $.built_in_functions_with_optional_args,
      ),

    dollar_function: ($) =>
      seq(
        token(
          seq(
            choice(
              /\$BIT/i,
              /\$D(ATA)?/i,
              choice(/\$LISTSAME/i, /\$LS/i),
              /\$MATCH/i,
              /\$NORMALIZE/i,
              /\$QS(UBSCRIPT)?/i,
              /\$ZBITAND/i,
              /\$ZBITCOUNT/i,
              /\$ZPOWER/i,
              /\$BITCOUNT/i,
              /\$BITFIND/i,
              /\$C(HAR)?/i,
              /\$WC(HAR)?/i,
              /\$ZF/i,
              /\$ZU(TIL)?/i,
              /\$XECUTE/i,
              /\$A(SCII)?/i,
              /\$BITLOGIC/i,
              /\$DECIMAL/i,
              /\$FACTOR/i,
              /\$G(ET)?/i,
              /\$L(ENGTH)?/i,
              /\$NA(ME)?/i,
              /\$ST(ACK)?/i,
              /\$WA(SCII)?/i,
              /\$ZDA(SCII)?/i,
              /\$ZLA(SCII)?/i,
              /\$ZQA(SCII)?/i,
              /\$ZSEEK/i,
              /\$ZWA(SCII)?/i,
              /\$ZWIDTH/i,
              /\$CLASSNAME/i,
              /\$NOW/i,
              /\$COMPILE/i,
              /\$DOUBLE/i,
              /\$ISOBJECT/i,
              /\$ISVECTOR/i,
              choice(/\$LISTLENGTH/i, /\$LL/i),
              choice(/\$LISTVALID/i, /\$LV/i),
              /\$QL(ENGTH)?/i,
              /\$RE(VERSE)?/i,
              /\$T(EXT)?/i,
              /\$WISWIDE/i,
              /\$WL(ENGTH)?/i,
              /\$WRE(VERSE)?/i,
              /\$WF(IND)?/i,
              /\$ZABS/i,
              /\$ZARCCOS/i,
              /\$ZARCSIN/i,
              /\$ZARCTAN/i,
              /\$ZCOS/i,
              /\$ZCOT/i,
              /\$ZCSC/i,
              /\$ZC(YC)?/i,
              /\$ZDC(HAR)?/i,
              /\$ZEXP/i,
              /\$ZH(EX)?/i,
              /\$ZISWIDE/i,
              /\$ZLC(HAR)?/i,
              /\$ZLN/i,
              /\$ZLOG/i,
              /\$ZQC(HAR)?/i,
              /\$ZSE(ARCH)?/i,
              /\$ZSEC/i,
              /\$ZSIN/i,
              /\$ZSQR/i,
              /\$ZTAN/i,
              /\$ZVERSION/i,
              /\$ZWC(HAR)?/i,
              /\$ZWPACK/i,
              /\$ZWBPACK/i,
              /\$ZWUNPACK/i,
              /\$ZWBUNPACK/i,
              /\$F(IND)?/i,
              /\$IN(UMBER)?/i,
              /\$J(USTIFY)?/i,
              /\$NC(ONVERT)?/i,
              /\$VE(CTOR)?/i,
              choice(/\$VECTORDEFINED/i, /\$VD/i),
              choice(/\$VECTOROP/i, /\$VOP/i),
              /\$TR(ANSLATE)?/i,
              /\$ZCRC/i,
              /\$ZPOSITION/i,
              /\$ZNAME/i,
              /\$ZZENKAKU/i,
              /\$I(NCREMENT)?/i,
              /\$ISVALIDDOUBLE/i,
              /\$ISVALIDNUM/i,
              /\$LISTNEXT/i,
              choice(/\$LISTFIND/i, /\$LF/i),
              /\$ZB(OOLEAN)?/i,
              choice(/\$LISTUPDATE/i, /\$LU/i),
              /\$LOCATE/i,
              /\$PREPROCESS/i,
              /\$O(RDER)?/i,
              /\$PARAMETER/i,
              /\$PREFETCHOFF/i,
              /\$PREFETCHON/i,
              /\$PROPERTY/i,
              /\$Q(UERY)?/i,
              /\$R(ANDOM)?/i,
              /\$SEQ(UENCE)?/i,
              /\$REPLACE/i,
              /\$SC(ONVERT)?/i,
              choice(/\$ZCONVERT/i, /\$ZCVT/i),
              /\$ZSTRIP/i,
              /\$SORTBEGIN/i,
              /\$SORTEND/i,
              /\$ZBITFIND/i,
              /\$ZBITGET/i,
              /\$ZBITLEN/i,
              /\$ZBITNOT/i,
              /\$ZBITOR/i,
              /\$ZBITSET/i,
              /\$ZBITSTR/i,
              /\$ZBITXOR/i,
              /\$ZOBJCLASS/i,
              /\$ZOBJPROPERTY/i,
              /\$ZV(ERSION)?/i, // $ZVERSION
            ),
            token.immediate('('),
          ),
        ),
        optional(repeat_with_commas($.expression)),
        ')',
      ),
    objectscript_identifier: _ => IDENT_SEG,
    numeric_literal: _ =>
      token(/[+-]?(?:\d+\.\d+(?:[eE][+-]?\d+)?|\.\d+(?:[eE][+-]?\d+)?|\d+(?:[eE][+-]?\d+)?)/),
    // string literals in objecscript
    // are an any length sequence of characters besides ", between ".
    // Double-quotes are escaped with double quotes
    string_literal: (_) =>
      token(seq('"', repeat(choice(/[^"]+/, '""')), '"')),
    // NOTE: It's worthwhile distinguishing between macro_constant and macro_function
    // as nvim has dedicated captures groups for both.
    // @macro.constant, and @macro.function, repectively.
